--- a/07_CafeMember/WebContent/WEB-INF/web.xml
+++ b/07_CafeMember/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>06_Attribute</display-name>
+  <display-name>07_CafeMember</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -11,23 +11,13 @@
   </welcome-file-list>
   <servlet>
     <description></description>
-    <display-name>RegisterServlet</display-name>
-    <servlet-name>RegisterServlet</servlet-name>
-    <servlet-class>servlet.controller.RegisterServlet</servlet-class>
+    <display-name>EntranceServlet</display-name>
+    <servlet-name>EntranceServlet</servlet-name>
+    <servlet-class>servlet.controller.EntranceServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>RegisterServlet</servlet-name>
-    <url-pattern>/RegisterServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ViewServlet</display-name>
-    <servlet-name>ViewServlet</servlet-name>
-    <servlet-class>servlet.controller.ViewServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ViewServlet</servlet-name>
-    <url-pattern>/ViewServlet</url-pattern>
+    <servlet-name>EntranceServlet</servlet-name>
+    <url-pattern>/entrance</url-pattern>
   </servlet-mapping>
   <filter>
     <display-name>EncodingFilter</display-name>
