--- a/08_Cookie/WebContent/WEB-INF/web.xml
+++ b/08_Cookie/WebContent/WEB-INF/web.xml
@@ -18,4 +18,24 @@
     <filter-name>EncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SetCookieTest</display-name>
+    <servlet-name>SetCookieTest</servlet-name>
+    <servlet-class>servlet.cookie.SetCookieTest</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SetCookieTest</servlet-name>
+    <url-pattern>/SetCookieTest</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>GetCookieTest</display-name>
+    <servlet-name>GetCookieTest</servlet-name>
+    <servlet-class>servlet.cookie.GetCookieTest</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetCookieTest</servlet-name>
+    <url-pattern>/GetCookieTest</url-pattern>
+  </servlet-mapping>
 </web-app>
